<resources>
    <string name="app_name">CourseList</string>
    <string name="action_settings">Settings</string>
    <string name="mon">星期一</string>
    <string name="tue">星期二</string>
    <string name="wed">星期三</string>
    <string name="thu">星期四</string>
    <string name="fri">星期五</string>
    <string name="first">第一节</string>
    <string name="second">第二节</string>
    <string name="third">第三节</string>
    <string name="forth">第四节</string>
    <string name="fifth">第五节</string>
    <string name="sixth">第六节</string>
    <string name="seventh">第七节</string>
    <string name="mycur">我的课程表</string>
</resources>
